--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-	"name": "@codeeditorland/helpers",
-	"description": "",
-	"sideEffects": false,
-	"main": "lib/index.js",
-	"module": "src/index.js",
-	"scripts": {
-		"build": "swc -V && swc src -d lib",
-		"prepublishOnly": "swc src -d lib"
-	},
 	"dependencies": {},
+	"description": "",
 	"devDependencies": {
 		"@codeeditorland/cli": "0.0.1",
 		"@codeeditorland/core": "0.0.1"
 	},
-	"esnext": "src/index.js"
+	"esnext": "src/index.js",
+	"main": "lib/index.js",
+	"module": "src/index.js",
+	"name": "@codeeditorland/helpers",
+	"scripts": {
+		"build": "swc -V && swc src -d lib",
+		"prepublishOnly": "swc src -d lib"
+	},
+	"sideEffects": false
 }
